--- a/src/Components/DashBoard/TransTable/TransTable.scss
+++ b/src/Components/DashBoard/TransTable/TransTable.scss
@@ -1,8 +1,8 @@
 .trans-table-item-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    background-color: #4444;
+    background-color: #F8F8F8;
     padding: 10px 8px;
     overflow: hidden;
     .trans-table-profile{
@@ -12,7 +12,7 @@
             margin-left: 12px;
         }
         .profile-image{
-            background-color: beige;
+            background-color: #8291A9;
             height: 45px;
             width: 45px;
             border-radius: 50%;
