--- a/src/Components/SideBarNav/SideBarNav.scss
+++ b/src/Components/SideBarNav/SideBarNav.scss
@@ -14,6 +14,12 @@
         li {
             height: 4rem;
             list-style: none;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+            //background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             svg {
                 color: aquamarine;
             }
