--- a/src/Components/SideBarNav/SideBarNav.scss
+++ b/src/Components/SideBarNav/SideBarNav.scss
@@ -21,7 +21,7 @@
             justify-content: center;
             align-items: center;
             svg {
-                color: aquamarine;
+                color: #8291A9;
             }
         }
     }
