--- a/src/Components/HeaderBar/HeaderBar.scss
+++ b/src/Components/HeaderBar/HeaderBar.scss
@@ -46,6 +46,7 @@
         background-color: transparent;
         border: none;
         width: 100%;
+        font-weight: 400;
     }
     input:focus-visible {
         outline: none;
