--- a/src/Components/SideBarNav/SideBarNav.scss
+++ b/src/Components/SideBarNav/SideBarNav.scss
@@ -23,6 +23,11 @@
             svg {
                 color: #8291A9;
             }
+           
         }
+        li:hover{
+            cursor: pointer;
+
+        } 
     }
 }
