--- a/src/Components/DashBoard/DashBoardContainer.scss
+++ b/src/Components/DashBoard/DashBoardContainer.scss
@@ -27,6 +27,16 @@
 }
 .chart-container {
     width: 38vw;
+    
+    display: flex;
+    flex-direction: column;
+    
+}
+.chart-view-container {
+    width: 35vw;
+    align-self: center;
+    background-color:#F2F5FA ;
+    
 }
 
 ::-webkit-scrollbar {
