--- a/src/Components/DashBoard/TransChartHeader/TransChartHeader.scss
+++ b/src/Components/DashBoard/TransChartHeader/TransChartHeader.scss
@@ -1,15 +1,30 @@
 .trans-header{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding:0 1.5rem;
+    .select-vert-container{
+        display: flex;
+        
+    }
     select{
-        padding: 2px 4px;
-        border: 2px solid #8291A9;
+        padding: 1px 4px;
+        border: 1.5px solid #8291A9;
         border-radius: 6px;
         font-family: "Poppins";
         font-weight: 400;
         font-size: 12.13px;
         line-height: 18.67px;
         color:#545454 ;
+    }
+    .vert-icon{
+        margin-left: 4px;
+        padding: 1px 4px;
+        border: 1.5px solid #8291A9;
+        border-radius: 6px;
+        
+            color: #8291A9;
+    
     }
 }
 .trans-chart-container{
