--- a/src/Components/DashBoard/BankCard/BankCard.scss
+++ b/src/Components/DashBoard/BankCard/BankCard.scss
@@ -40,9 +40,21 @@
 }
 
 .chip{
-    height: 36px;
-    width: 46px;
+    height: 30px;
+    width: 40px;
     background-color: #FFCA3F;
     border-radius: 8px;
     margin: 6px 0;
+}
+.debit-card-num{
+    p{
+        font-weight: 400;
+    }
+    span{
+        font-weight: 200;
+        font-size: 10px;
+    }
+}
+.card-name{
+    font-weight: 400 !important;
 }
