new bank dashboard

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .layout {
     display: flex;
     width: 100vw;
-    justify-content: center;
+    //justify-content: center;
 }
 .container {
     display: flex;
