new dash board and add bank started

--- a/src/BankDashBoard/Components/SideNavBar/NavBarStyle.scss
+++ b/src/BankDashBoard/Components/SideNavBar/NavBarStyle.scss
@@ -6,7 +6,7 @@
 
 //Drawer Body
 #root > div > div > div > div{
-    background-color: #404e67;
+   // background-color: #404e67;
     color: #dcdcdc;
 }
 
@@ -46,5 +46,10 @@
         }
     }
 }
-   
-   
+
+
+#root > div > div.MuiBox-root.css-wynq5k > div > div{
+
+
+box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
+}
